manifests/04_Progressive/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: progressive-demo-canary
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: progressive-demo
