manifests/04_Progressive/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progressive-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pg.dev.sample.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: progressive-demo-stable
            port:
              number: 80
